BaSP-W06: made login, give some style and give some functionality with javascript

--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -77,10 +77,11 @@ label {
 }
 
 input {
-    width: 35vw;
+  width: 35vw;
   padding: 4px;
   margin: 5px 0;
   border: 1px solid black;
+  outline: none;
 }
 
 .login-account {
@@ -169,4 +170,18 @@ input {
   button {
     width: 10vw;
   }
+}
+
+.green-border {
+  border: 1.5px solid green;
+}
+
+.red-border {
+  border: 1.5px solid red;
+}
+
+.redP {
+  font-size: 1rem;
+  font-family: "Roboto";
+  color: red;
 }
