--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -37,10 +37,10 @@
           <a href="#"> Home</a>
         </li>
         <li>
-          <a href="#">SignUp</a>
+          <a href="../views/employee-signup.html">SignUp</a>
         </li>
         <li>
-          <a href="#">Login</a>
+          <a href="../views/login.html">Login</a>
         </li>
       </ul>
       <h2 class="nav-contact">Contact</h2>
