BaSP-W06: create contact.js and work on it

--- a/Semana-06/styles/ask-for.css
+++ b/Semana-06/styles/ask-for.css
@@ -153,3 +153,18 @@ input[type="reset"] {
     width: 63%;
 }
 }
+
+.green-border {
+  border: 2px solid green !important;
+}
+
+.red-border {
+  border: 1.5px solid red !important;
+}
+
+.redP{
+  font-size: 1.5rem;
+  font-family: "Roboto";
+  color: red;
+  margin-bottom: 15px;
+}
