--- a/Semana-07/styles/features.css
+++ b/Semana-07/styles/features.css
@@ -56,7 +56,7 @@
 @media only screen and (min-width: 834px) {
 
   .features h2 {
-    font-size: 2rem;
+    font-size: 1.75rem;
     line-height: 2.375rem
   }
 
@@ -79,14 +79,19 @@
   }
 }
 
-@media only screen and (min-width: 1512px) {
+@media only screen and (min-width: 1024px) {
  .features-blocks {
   justify-content: flex-start;
   width: 85%;
  }
+
+ .features h3 {
+  font-size: 1.25rem;
+}
  
   .features-blocks img {
     width: 2vw;
     padding: 2vw;
+    margin-right: 40px;
   }
 }
