--- a/Semana-07/styles/products.css
+++ b/Semana-07/styles/products.css
@@ -63,8 +63,12 @@
 }
 
 
-@media only screen and (min-width: 1512px) {
+@media only screen and (min-width: 1024px) {
   .products {
     margin-top: 165px;
   }
+
+  .products li {
+    font-size: 1.25rem;
+  } 
 }
